--- a/.github/workflows/StudentRegistryBildAndTest.yml
+++ b/.github/workflows/StudentRegistryBildAndTest.yml
@@ -17,6 +17,7 @@ jobs:
     
     permissions: 
       contents: write # to allow pushing to the repository
+      pages: write
     strategy:
       matrix:
         node-version: [18.x]
